--- a/SDLDungeonGame_Barebones/SDLDungeonGame/SDLDungeonGame.vcxproj
+++ b/SDLDungeonGame_Barebones/SDLDungeonGame/SDLDungeonGame.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameCore.h" />
     <ClInclude Include="Hero.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="RoomRender.h" />
     <ClInclude Include="Sprite.h" />
   </ItemGroup>
@@ -29,6 +30,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameCore.cpp" />
     <ClCompile Include="Hero.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RoomRender.cpp" />
     <ClCompile Include="Sprite.cpp" />
