--- a/SDLDungeonGame_Barebones/SDLDungeonGame/SDLDungeonGame.vcxproj.filters
+++ b/SDLDungeonGame_Barebones/SDLDungeonGame/SDLDungeonGame.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="RoomRender.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Item.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RoomRender.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Item.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
